--- a/PythonDemo/.settings/org.eclipse.core.resources.prefs
+++ b/PythonDemo/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,10 @@
 eclipse.preferences.version=1
 encoding//com/DictCheck.py=utf-8
 encoding//com/Functions.py=utf-8
+encoding//gui/__init__.py=utf-8
+encoding//gui/requestsTest.py=utf-8
+encoding//gui/requestsTest2.py=utf-8
+encoding//gui/thread.py=utf-8
 encoding//img_spider/html_output.py=utf-8
 encoding//img_spider/html_parser.py=utf-8
 encoding//img_spider/spider_main.py=utf-8
